--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Techdoodle",
   "license": "MIT",
   "dependencies": {
-    "level": "^6.0.1"
+    "level": "^6.0.1",
+    "yargs": "^15.4.1"
   }
 }
